--- a/report/reportlatex/sections/TitleAndToc.tex
+++ b/report/reportlatex/sections/TitleAndToc.tex
@@ -1,6 +1,11 @@
+\maketitle
+
 %----------------------------------------------------------------------------------------
-%	PROBLEM 2
+%	TABLE OF CONTENTS
 %----------------------------------------------------------------------------------------
 
-\section{Algorithms}
+%\setcounter{tocdepth}{1} % Uncomment this line if you don't want subsections listed in the ToC
 
+\newpage
+\tableofcontents
+\newpage
