--- a/report/reportlatex/sections/section1.tex
+++ b/report/reportlatex/sections/section1.tex
@@ -1,10 +1,20 @@
 %----------------------------------------------------------------------------------------
-%	PROBLEM 1
+%	Chapter 1
 %----------------------------------------------------------------------------------------
 
 % To have just one problem per page, simply put a \clearpage after each problem
 
-\begin{homeworkProblem}
+\section{Introduction}
+
+\section{Input Data}
+
+\section{Features}
+The features available in the data are top 3 hours of the day during which the user posts the maximum number of posts, the total posts per day and  a network of the user's friends. Given the infinite number of features per user in the input data set, the best predictors for long and latitude need to identified. \cite{Guyon2003}
+
+
+
+\subsection{Feature Selection}
+
 \lipsum[1]\vspace{10pt} % Question
 
 \problemAnswer{ % Answer
@@ -14,4 +24,5 @@
 
 \lipsum[2]
 }
-\end{homeworkProblem}
+
+\subsection{Feature Transformation}
