--- a/report/reportlatex/Report.tex
+++ b/report/reportlatex/Report.tex
@@ -27,7 +27,7 @@
 \usepackage{graphicx} % Required to insert images
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
 \usepackage{datetime}
-
+\usepackage{booktabs}
 % Margins
 \topmargin=-0.45in
 \evensidemargin=0in
@@ -103,7 +103,7 @@
 \newcommand{\hmwkClass}{COMP90051 - Statistical and Evolutionary Learning} % Course/class
 \newcommand{\hmwkClassTime}{10:30am} % Class/lecture time
 \newcommand{\hmwkClassInstructor}{Jones} % Teacher/lecturer
-\newcommand{\hmwkAuthorName}{Aparna Elangovan (559992) \& Soundarya} % Your name
+\newcommand{\hmwkAuthorName}{Team ClockLat (559992, 630915)} % Your name
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
